--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ pytz==2021.3
 requests==2.26.0
 tinyman-py-sdk @ git+https://github.com/tinymanorg/tinyman-py-sdk.git@d36a9c1b5f8f69a8a24b780fdab3e0afb1d76d72
 urllib3==1.26.7
+python-daemon==2.3.0
+networkx==2.6.3
