--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ asyncio==3.4.3
 matplotlib==3.5.1
 numpy==1.21.5
 pandas==1.3.5
-py-algorand-sdk==1.8.0
+py-algorand-sdk
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
-tinyman-py-sdk @ git+https://github.com/tinymanorg/tinyman-py-sdk.git@d36a9c1b5f8f69a8a24b780fdab3e0afb1d76d72
+tinyman-py-sdk @ git+https://github.com/tinymanorg/tinyman-py-sdk.git
 urllib3==1.26.7
 python-daemon==2.3.0
 networkx==2.6.3
