--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
 tinyman-py-sdk @ git+https://github.com/tinymanorg/tinyman-py-sdk.git
+tinyman-py-sdk-old @ git+https://github.com/lrnz-vtl/tinyman-py-sdk-old.git
 urllib3==1.26.7
 python-daemon==2.3.0
 networkx==2.6.3
