--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ python-daemon==2.3.0
 networkx==2.6.3
 pyarrow==7.0.0
 aiohttp==3.8.1
+scikit-learn~=1.0.2
+scipy~=1.8.0
+statsmodels~=0.13.2
+uvloop~=0.16.0
